# market-feature-store

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: add_data_quality_checks_table.py  add_feature_definitions_table.py  add_feature_values_table.py  add_ingestion_runs_table.py  add_market_bars_table.py  add_raw_payload_object_storage.py  add_symbols_table.py  baseline.py  c3d4e5f6a7b8_add_raw_market_data_table.py  reorder_market_bars_unique_constraint.py
backend/: bar.py  config.py  db.py  logging.py  main.py
backend/api/: router.py
backend/features/: calculator.py
backend/ingestion/: pipeline.py  reprocess.py
backend/jobs/: scheduler.py
backend/monitoring/: metrics.py
market_feature_store.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_bar.py  test_config.py  test_data_quality_checks_repository.py  test_db.py  test_feature_definitions_repository.py  test_feature_values_repository.py  test_health.py  test_ingestion_pipeline.py  test_ingestion_run_repository.py  test_ingestion_run_trigger_service.py  test_logging.py  test_market_bars_repository.py  test_migrations.py  test_provider_adapter.py  test_provider_base.py  test_provider_factory.py  test_provider_fake.py  test_raw_market_data_repository.py  test_raw_market_data_service.py  test_reprocess.py  test_symbol_repository.py  test_symbol_schemas.py  test_symbol_service.py  test_symbols_endpoint.py
(+13 files in other folders)
